--- a/assets/package.json
+++ b/assets/package.json
@@ -3,9 +3,8 @@
   "scripts": {
     "format": "prettier --write .",
     "format-check": "prettier --check .",
-    "build": "webpack --mode development",
-    "watch": "webpack --mode development --watch",
-    "deploy": "NODE_ENV=production webpack --mode production"
+    "build.dev": "webpack --mode development",
+    "build.prod": "NODE_ENV=production webpack --mode production"
   },
   "dependencies": {
     "monaco-editor": "^0.38.0",
@@ -25,6 +24,7 @@
     "monaco-editor-webpack-plugin": "^7.0.1",
     "prettier": "^2.8.8",
     "webpack": "^5.82.0",
-    "webpack-cli": "^5.1.0"
+    "webpack-cli": "^5.1.0",
+    "webpack-merge": "^5.8.0"
   }
 }
