--- a/assets/package.json
+++ b/assets/package.json
@@ -5,6 +5,7 @@
     "format-check": "prettier --check ."
   },
   "dependencies": {
+    "@fontsource/jetbrains-mono": "^5.0.3",
     "@monaco-editor/loader": "^1.3.3",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
